# 3DRender_Sandbox

./: CMakeLists.txt  CoordSystems.txt  Notes.txt  README.md  UnitCube.cpp  UnitCube.h
Libraries/Include/glad/: glad.h
Libraries/Lib/: glfw3.lib
Source/: Camera.hpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  UnitCube.cpp  UnitCube.h  main.cpp  main.h
Source/Shaders/: Shader.cpp  Shader.h  basic.frag  default.frag  default.vert  depth.frag  depth.vert  outline.frag
Source/Textures/: Texture.cpp  Texture.h
